# ask-scotty

./: .gitignore  CONVENTIONS.md  Makefile  README.md
.devcontainer/: devcontainer.json
api/: pyproject.toml
api/src/ask_scotty/: contract.py  escalation.py  handler.py  local.py
api/src/ask_scotty/prompts/: system_prompt.md
api/src/ask_scotty/providers/: base.py  bedrock.py  stub.py
api/tests/: test_contract.py  test_handler.py  test_providers.py
docs/: PROVENANCE.md  architecture-diagram.md  architecture.md
infra/: samconfig.toml  template.yaml
