[project]
name = "ask-scotty"
version = "0.1.0"
description = "Ask Scotty — CMU student-support Q&A pilot (95-731 team milestone project)"
requires-python = ">=3.12"
dependencies = []  # stub path is dependency-free; boto3 is provided by the Lambda runtime

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "boto3>=1.34",  # local Bedrock/DynamoDB testing & deploy tooling
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ask_scotty = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the package on the path directly so `make test` works on a fresh clone
# without requiring the editable install first ("clone and run").
pythonpath = ["src"]
